[gd_scene load_steps=5 format=2]

[ext_resource path="res://gui/BattleScene.gd" type="Script" id=1]
[ext_resource path="res://player/avatar/Avatar.tscn" type="PackedScene" id=2]
[ext_resource path="res://player/avatar/CardManager.gd" type="Script" id=3]
[ext_resource path="res://CardTray.gd" type="Script" id=4]

[node name="BattleScene" type="Node2D"]
script = ExtResource( 1 )

[node name="Player1Avatar" parent="." instance=ExtResource( 2 )]

[node name="Player1Cards" type="Node2D" parent="."]

[node name="Player2Cards" type="Node2D" parent="."]

[node name="Player2Avatar" parent="." instance=ExtResource( 2 )]

[node name="HistoryStream" type="RichTextLabel" parent="."]
margin_left = 730.0
margin_top = 8.0
margin_right = 1521.0
margin_bottom = 585.0

[node name="CardTray" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="CardManager" type="Node2D" parent="CardTray"]
script = ExtResource( 3 )

[node name="CardsStartFrom" type="Node2D" parent="CardTray"]
position = Vector2( 68, 0 )
